tests/neg/match-type-enumeration-value-hack.check
-- [E172] Type Error: tests/neg/match-type-enumeration-value-hack.scala:11:40 ------------------------------------------
11 |  summon[Suit#Value =:= EnumValue[Suit]] // error
   |                                        ^
   |                                        Cannot prove that Suit#Value =:= EnumValue[Suit].
   |
   |                                        Note: a match type could not be fully reduced:
   |
   |                                          trying to reduce  EnumValue[Suit]
   |                                          failed since selector Suit
   |                                          does not match  case EnumValueAux[t] => t
   |                                          and cannot be shown to be disjoint from it either.
